--- a/index.html
+++ b/index.html
@@ -18,41 +18,49 @@
       let ctx = canvas.getContext("2d");
       ctx.fillStyle = "red";
       ctx.strokeStyle = "none";
+      ctx.lineWidth = 8;
+      ctx.lineCap = "round";
 
       let painting = false;
+      let last;
 
       let isTouchDevice = "ontouchstart" in document.documentElement;
+
       if (isTouchDevice) {
+        canvas.ontouchstart = (e) => {
+          last = [e.touches[0].clientX, e.touches[0].clientY];
+        };
         canvas.ontouchmove = (e) => {
-          ctx.beginPath();
-          ctx.arc(
+          drawLine(
+            last[0],
+            last[1],
             e.touches[0].clientX,
-            e.touches[0].clientY,
-            10,
-            10,
-            0,
-            2 * Math.PI
+            e.touches[0].clientY
           );
-          ctx.stroke();
-          ctx.fill();
+          last = [e.touches[0].clientX, e.touches[0].clientY];
         };
       } else {
-        canvas.onmousedown = () => {
+        canvas.onmousedown = (e) => {
           painting = true;
+          last = [e.clientX, e.clientY];
         };
 
         canvas.onmousemove = (e) => {
           if (painting === true) {
-            //   ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10);
-            ctx.beginPath();
-            ctx.arc(e.clientX, e.clientY, 10, 10, 0, 2 * Math.PI);
-            ctx.stroke();
-            ctx.fill();
+            drawLine(last[0], last[1], e.clientX, e.clientY);
+            last = [e.clientX, e.clientY];
           }
         };
         canvas.onmouseup = () => {
           painting = false;
         };
+      }
+
+      function drawLine(x1, y1, x2, y2) {
+        ctx.beginPath();
+        ctx.moveTo(x1, y1);
+        ctx.lineTo(x2, y2);
+        ctx.stroke();
       }
     </script>
   </body>
